//! gRPC server for VideoService
//!
//! This module implements the VideoService gRPC server.
//! The service provides video management functionality including:
//! - Upload video files
//! - Get video metadata
//! - Transcode videos
//! - List and delete videos
//! - Check transcoding progress

use sqlx::PgPool;
use tonic::{Request, Response, Status};
use tracing::{debug, info};

// Generated protobuf types and service traits
pub mod proto {
    pub mod video {
        pub mod v1 {
            tonic::include_proto!("nova.video.v1");
        }
    }
}

pub use proto::video::v1::{
    video_service_server, DeleteVideoRequest, DeleteVideoResponse, GetTranscodingProgressRequest,
    GetVideoMetadataRequest, ListVideosRequest, ListVideosResponse, TranscodeVideoRequest,
    TranscodeVideoResponse, TranscodingProgress, UploadVideoRequest, UploadVideoResponse,
    VideoMetadata, VideoSummary,
};

/// VideoService gRPC server implementation
#[derive(Clone)]
pub struct VideoServiceImpl {
    pool: PgPool,
}

impl VideoServiceImpl {
    /// Create a new VideoService implementation
    pub fn new(pool: PgPool) -> Self {
        Self { pool }
    }
}

#[tonic::async_trait]
impl video_service_server::VideoService for VideoServiceImpl {
    async fn upload_video(
        &self,
        request: Request<UploadVideoRequest>,
    ) -> Result<Response<UploadVideoResponse>, Status> {
        let req = request.into_inner();
        info!("Uploading video: {:?}", req.title);

        // TODO: Implement actual video upload logic
        // This will be filled in with the migrated S3 service logic
        Ok(Response::new(UploadVideoResponse {
            video_id: uuid::Uuid::new_v4().to_string(),
            upload_url: "https://s3.example.com/presigned-url".to_string(),
            upload_session_id: uuid::Uuid::new_v4().to_string(),
        }))
    }

    async fn get_video_metadata(
        &self,
        request: Request<GetVideoMetadataRequest>,
    ) -> Result<Response<VideoMetadata>, Status> {
        let req = request.into_inner();
        debug!("Getting metadata for video: {}", req.video_id);

        // TODO: Implement actual metadata retrieval logic
        let now = std::time::SystemTime::now()
            .duration_since(std::time::UNIX_EPOCH)
            .unwrap_or_default()
            .as_secs() as i64;

        Ok(Response::new(VideoMetadata {
            id: req.video_id,
            user_id: "user_placeholder".to_string(),
            title: "Video Title".to_string(),
            description: "".to_string(),
            duration: 0,
            width: 0,
            height: 0,
            mime_type: "video/mp4".to_string(),
            created_at: now,
            updated_at: now,
            thumbnail_url: "".to_string(),
            status: "ready".to_string(),
            quality: None,
        }))
    }

    async fn transcode_video(
        &self,
        request: Request<TranscodeVideoRequest>,
    ) -> Result<Response<TranscodeVideoResponse>, Status> {
        let req = request.into_inner();
        info!("Starting transcoding for video: {}", req.video_id);

        // TODO: Implement actual transcoding logic
        Ok(Response::new(TranscodeVideoResponse {
            job_id: uuid::Uuid::new_v4().to_string(),
            video_id: req.video_id,
            status: "queued".to_string(),
        }))
    }

    async fn get_transcoding_progress(
        &self,
        request: Request<GetTranscodingProgressRequest>,
    ) -> Result<Response<TranscodingProgress>, Status> {
        let req = request.into_inner();
        debug!("Getting progress for job: {}", req.job_id);

        // TODO: Implement actual progress retrieval logic
        Ok(Response::new(TranscodingProgress {
            job_id: req.job_id,
            status: "processing".to_string(),
            progress_percent: 50,
            current_resolution: "720p".to_string(),
            estimated_time_remaining: "PT5M".to_string(),
            error_message: "".to_string(),
        }))
    }

    async fn list_videos(
        &self,
        request: Request<ListVideosRequest>,
    ) -> Result<Response<ListVideosResponse>, Status> {
        let req = request.into_inner();
        debug!("Listing videos for user: {}", req.user_id);

        // TODO: Implement actual video listing logic
        Ok(Response::new(ListVideosResponse {
            videos: vec![],
            next_cursor: "".to_string(),
            has_more: false,
        }))
    }

    async fn delete_video(
        &self,
        request: Request<DeleteVideoRequest>,
    ) -> Result<Response<DeleteVideoResponse>, Status> {
        let req = request.into_inner();
        info!("Deleting video: {}", req.video_id);

        // TODO: Implement actual video deletion logic
        Ok(Response::new(DeleteVideoResponse {
            video_id: req.video_id,
            success: true,
        }))
    }
}
